# rust-grpc-examle

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: greeter.proto
src/client/: main.rs
src/server/: main.rs
