[package]
authors = ["Marco De Luca <marcodl404@gmail.com>"]
name = "rust-grpc-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.7.1"
prost = "0.10"

[build-dependencies]
tonic-build = "0.7.0"


# server binary
[[bin]]
   name = "server"
   path = "src/server/main.rs"

# client binary
[[bin]]
   name = "client"
   path = "src/client/main.rs"
